Fix nav on safari

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -176,6 +176,7 @@ nav.header {
 
   
   ul {
+    display: -webkit-box;
     display: flex;
     justify-content: space-around;
     
